schedule demo icon alignment fix

--- a/src/Components/ScheduleADemo/ScheduleADemo.css
+++ b/src/Components/ScheduleADemo/ScheduleADemo.css
@@ -254,6 +254,11 @@
   position: absolute;
   top: 1px;
   width: 44px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 97%;
   color: white;
   border-right: 1px solid #c3cde4;
   border-radius: 6px;
